...
                                <rect key="frame" x="305" y="88" width="89" height="44"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="gku-ao-LSY"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                <state key="normal" title="Add"/>
                                <connections>
                                    <action selector="addButtonTapped:" destination="ruu-He-w5L" eventType="touchUpInside" id="Az5-JV-mpj"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What's in your fridge ?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sAr-mR-3tF">
                                <rect key="frame" x="20" y="88" width="285" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="IngredientTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="jzZ-Gb-4iX"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
                            </textField>
...
                                <rect key="frame" x="0.0" y="802" width="414" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XjD-Hz-3HI" customClass="SearchButtonView" customModule="Reciplease" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="-5" width="414" height="65"/>
                                        <color key="backgroundColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                        <state key="normal" title="Tap to search for recipes">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="searchButtonTapped:" destination="ruu-He-w5L" eventType="touchUpInside" id="lcQ-HV-MGE"/>
                                        </connections>
                                    </button>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="FL1-V1-Qms"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="LFk-OB-V8P"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Clear"/>
                                <connections>
                                    <action selector="clearButtonTapped:" destination="ruu-He-w5L" eventType="touchUpInside" id="rNq-LZ-M6L"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                                <rect key="frame" x="0.0" y="797" width="414" height="65"/>
                                <color key="backgroundColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="65" id="Kdw-5T-SNk"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="Get direction">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="getDirectionButtonTapped:" destination="R7R-X4-h07" eventType="touchUpInside" id="EnK-pU-oFT"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="cpI-1W-k9E" firstAttribute="trailing" secondItem="IXr-FL-ZpD" secondAttribute="trailing" id="d8G-rb-hom"/>
                            <constraint firstItem="IXr-FL-ZpD" firstAttribute="leading" secondItem="cpI-1W-k9E" secondAttribute="leading" id="fZe-vp-eIL"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="cpI-1W-k9E"/>
                    </view>
                    <navigationItem key="navigationItem" id="wxK-uN-CsZ">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="heart" catalog="system" id="bte-WG-PiO" userLabel="favoriteBarButton">
                            <color key="tintColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="addFavoriteTapped:" destination="R7R-X4-h07" id="vWu-Us-3QV"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
