...

private extension FavoritesTableViewController {

    func configureNavBar() {
        guard let navigationController = navigationController else { return }
        navigationController.navigationBar.prefersLargeTitles = true
        navigationItem.title = "Favorites"
        navigationItem.largeTitleDisplayMode = .always
        navigationController.navigationBar.sizeToFit()
    }

    func configureViewModel() {
        tableView.accessibilityIdentifier = "favoritesTableView"
        viewModel.recipeHandler = { [weak self] recipe in
            guard let me = self else { return }
            me.viewModel.showRecipeDetail(with: recipe)
        }
        viewModel.favoriteIsNotEmptyHandler = { [weak self] in
            guard let me = self else { return }
...
